# teams-poll-stv

./: .editorconfig  README.md  docker-compose.yml
client/: README.md  package-lock.json  package.json  teamsapp.local.yml  teamsapp.yml
client/appPackage/: manifest.json
client/infra/: azure.parameters.json
server/: Cargo.toml  diesel.toml
server/migrations/2024-09-07-020247_create_polls/: down.sql  up.sql
server/migrations/2024-09-11-213332_add_ballot/: down.sql  up.sql
server/migrations/2024-09-15-190447_add_seed/: down.sql  up.sql
server/src/: error.rs  lib.rs  main.rs  poll.rs  poll_result.rs  voting.rs  web.rs
server/src/voting/: ballot.rs  id.rs  poll.rs  poll_result.rs  user.rs  voter.rs
server/src/web/: ballot_api.rs  db.rs  models.rs  poll_api.rs  result_api.rs  schema.rs
server/src/web/db/: models.rs  schema.rs
server/test/: demo.ps1
src/client/static/: mockup.html
