[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
chrono = { version = "0.4.38", features = ["std", "clock", "now", "serde"] }
serde_json = "1.0.127"
serde = { version = "1.0.209", features = ["derive"] }
rand = "0.8.5"
diesel = { version = "2.2.4", features = ["chrono", "postgres", "uuid"] }
